--- a/index.html
+++ b/index.html
@@ -153,6 +153,47 @@ CPRI压缩配置普通压缩，只压缩不降采样率<br>
 10/8：8B/10B线性编码效率<br>
 16/15：CPRI帧效率，一个CPRI基本帧含16个字，15个用于传输IQ数据，1个用于传输控制字<br>
 </font>
+<br>
+
+<table border="1">
+<tr>
+<th>载波带宽</th>
+<th>FFT尺寸</th>
+<th>子载波带宽</th>
+<th>采样率</th>
+</tr>
+<tr>
+<td>1.4 MHz </td>
+<td>128</td>
+<td rowspan="6">15 kHz</td>
+<td>1.92 MHz</td>
+</tr>
+<tr>
+<td>3 MHz </td>
+<td>256</td>
+<td>3.84 MHz</td>
+</tr>
+<tr>
+<td>5 MHz </td>
+<td>512</td>
+<td>7.68 MHz</td>
+</tr>
+<tr>
+<td>10 MHz </td>
+<td>1024</td>
+<td>15.36 MHz</td>
+</tr>
+<tr>
+<td>15 MHz </td>
+<td>1536</td>
+<td>23.04 MHz</td>
+</tr>
+<tr>
+<td>20 MHz  </td>
+<td>2048</td>
+<td>30.72 MHz</td>
+</tr>
+</table>
 
 
 <p>
